--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,7 @@
 <title>Tetration Appliance ISO Generator</title>
 
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
 
 <form class="ui form" action="" method="post" enctype="multipart/form-data">
