--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,7 @@
 <title>Tetration Appliance ISO Generator</title>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
