--- a/templates/form.html
+++ b/templates/form.html
@@ -16,7 +16,7 @@
             Use this tool to generate an ISO file to be mounted inside the relevant Tetration Appliance (ERSPAN,
             NetFlow,
             etc.)
-            OVA. <a href="mailto:tigarner@cisco.com">Request Support.</a>
+            OVA. <a href="mailto:tigarner@cisco.com">Request Support.</a><a href="/eula" style="padding-left: 3px">EULA</a>
         </p>
         <div class="ui hidden divider"></div>
 
