remove requirement on last 2 IPs

--- a/templates/form.html
+++ b/templates/form.html
@@ -53,12 +53,12 @@
             <div class="required field"> {{ form.gw1.label }} {{ form.gw1 }}</div>
         </div>
         <div class="two fields">
-            <div class="required field"> {{ form.ip2.label }} {{ form.ip2 }}</div>
-            <div class="required field"> {{ form.gw2.label }} {{ form.gw2 }}</div>
+            <div class="field"> {{ form.ip2.label }} {{ form.ip2 }}</div>
+            <div class="field"> {{ form.gw2.label }} {{ form.gw2 }}</div>
         </div>
         <div class="two fields">
-            <div class="required field"> {{ form.ip3.label }} {{ form.ip3 }}</div>
-            <div class="required field"> {{ form.gw3.label }} {{ form.gw3 }}</div>
+            <div class="field"> {{ form.ip3.label }} {{ form.ip3 }}</div>
+            <div class="field"> {{ form.gw3.label }} {{ form.gw3 }}</div>
         </div>
 
         <div class="ui hidden divider"></div>
